examples/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibers
spec:
  type: LoadBalancer
  selector:
    app: fibers
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: fibers
