examples/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fibers
spec:
  rules:
    - host: fibers.long2ice.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http
                port:
                  number: 80
